# dft

./: .env.example  Cargo.toml  README.md  STARTUP_GUIDE.md
.kiro/specs/distilled-cognition-engine/: requirements.md
.kiro/specs/dofta-farmers-coop/: design.md  tasks.md
backend/: Cargo.toml  README.md
backend/migrations/: .gitkeep  20240101000001_create_members_table.sql  20240101000002_create_product_listings_table.sql  20240101000003_create_orders_table.sql  20240101000004_create_transactions_table.sql  20240101000005_create_proposals_table.sql  20240101000006_create_votes_table.sql  20240101000007_create_ratings_table.sql  20240101000008_create_notifications_table.sql  20240101000009_create_notification_preferences_table.sql  20240101000010_create_audit_log_table.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  listings.rs  main.rs  models.rs  orders.rs  routes.rs
backend/src/handlers/: auth.rs  listings.rs  mod.rs  orders.rs
backend/src/middleware/: auth.rs
contracts/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
contracts/src/: lib.rs
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1768422784108-9eaba7117ee378.mjs  vite.config.ts.timestamp-1768424905145-733d6f87e651e8.mjs
frontend/src/: App.css  App.tsx
frontend/src/contexts/: NearWalletProvider.tsx  WalletContextProvider.tsx
frontend/src/services/: api.ts  near.ts
