[workspace]
members = ["backend", "contracts"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DOFTA Cooperative"]
license = "MIT"

[workspace.dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encryption
ring = "0.17"

# Email
lettre = "0.11"

# Testing
proptest = "1.4"

# Environment
dotenvy = "0.15"
